--- a/index.html
+++ b/index.html
@@ -65,6 +65,17 @@
       currentRPM = rpm;
     }
 
+    // Nyalain / matiin mesin
+    function setEngine(state) {
+      engineOn = state;
+      if (state) {
+        // Mesin hidup → idle di 1000 RPM
+        setRPM(1050);
+      } else {
+        // Mesin mati → jarum balik ke 0
+        setRPM(100);
+      }
+    }
 
     // Fungsi dummy lain (biar kompatibel sama script.js lu)
 setEngine(true);
