--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         setRPM(100);
       }
     }
-
+<script src="script.js">
     // Fungsi dummy lain (biar kompatibel sama script.js lu)
 setEngine(true);
 setSpeed(25); // 25 m/s
