--- a/index.html
+++ b/index.html
@@ -68,49 +68,45 @@
     <div id="speed-mode"></div>
   </div>
 
-  <!-- Panggil script bawaan -->
+  <!-- panggil script bawaan lebih dulu -->
   <script src="script.js"></script>
 
-  <!-- Override fungsi bawaan -->
+  <!-- baru definisi jarum dan override -->
   <script>
     const needle = document.getElementById('needle');
     let engineOn = false;
 
-    // simpan versi asli biar ga hilang
-    const originalSetRPM = window.setRPM;
-
-    // override fungsi setRPM
+    // ganti fungsi setRPM bawaan
     window.setRPM = function(rpm) {
-      originalSetRPM(rpm); // tetap update text bawaan
       if (!engineOn) rpm = 0;
       const clamped = Math.max(0, Math.min(rpm, 9000));
       const deg = (clamped / 9000) * 260 - 190;
       needle.style.transform = `rotate(${deg}deg)`;
     };
 
-    // override fungsi engine
-    const originalSetEngine = window.setEngine;
+    // ganti fungsi setEngine bawaan
     window.setEngine = function(state) {
-      originalSetEngine(state);
       engineOn = state;
-      if (!state) {
-        setRPM(0);
+      if (state) {
+        setRPM(1000);   // idle
       } else {
-        setRPM(1000);
+        setRPM(0);      // mati
       }
     };
 
+    // buat fungsi kosong biar script.js ga error
+    window.setSpeed = window.setSpeed || function() {};
+    window.setFuel = window.setFuel || function() {};
+    window.setHealth = window.setHealth || function() {};
+    window.setGear = window.setGear || function() {};
+    window.setHeadlights = window.setHeadlights || function() {};
+    window.setLeftIndicator = window.setLeftIndicator || function() {};
+    window.setSeatbelts = window.setSeatbelts || function() {};
+    window.setSpeedMode = window.setSpeedMode || function() {};
+
     // simulasi
     setEngine(true);
-    setSpeed(25);
     setRPM(2500);
-    setFuel(0.75);
-    setHealth(0.9);
-    setGear(3);
-    setHeadlights(1);
-    setLeftIndicator(true);
-    setSeatbelts(true);
-    setSpeedMode(1);
   </script>
 </body>
 </html>
